# longlho.github.io

./: .bazelrc  .gitignore  BUILD.bazel  IDEAS.md  MODULE.bazel  README  README.md  ilaf.html  index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post-renderer.ts  resume.ai  server.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
images/compart/_notes/: dwsync.xml
images/damtycoon/_notes/: dwsync.xml
images/icons/_notes/: dwsync.xml
images/psd/: chosen-nav.psd  shadow-border-bottom.psd  shadow-border-left.psd  shadow-border-right.psd  sidebar-tile
images/psd/_notes/: dwsync.xml
iphone/Images/_notes/: dwsync.xml
iphone/Parts/_notes/: dwsync.xml
iphone/mobile/: main.css  main.js
iphone/mobile/Images/_notes/: dwsync.xml
iphone/mobile/Parts/Images/_notes/: dwsync.xml
iphone/mobile/_notes/: dwsync.xml
js/fancybox/_notes/: dwsync.xml
posts/: cross-platform-web-runtime.md  metaframework-is-dead.md  monorepo-package-structure.md  next-server-actions.md
posts/frontend-bazel-monorepo-series/: post-01.md  post-02.md  post-03.md  post-04.md  post-05.md  post-06.md  post-07.md  post-08.md
prototypes/metadb4/: disclaimers.html  home.html  index.html
prototypes/metadb4/css/: main.css
prototypes/metadb4/js/: main.js
public/: GVL___Vines_Brushes___set_2_by_gvalkyrie.abr  robots.txt
public/images/ilafayette/_notes/: dwsync.xml
public/images/mauthner/_notes/: dwsync.xml
public/images/metadb/_notes/: dwsync.xml
public/images/nav/_notes/: dwsync.xml
public/images/psd/: shadow-border-top.psd
public/iphone/: index.html
public/iphone/mobile/Parts/: parts.js
public/iphone/mobile/Parts/_notes/: dwsync.xml
public/legacy/: index.html
public/prototypes/metadb4/css/: home.css  login.css
scripts/: BUILD.bazel  prerender-routes.mjs  render-posts.mjs  render-posts.ts
src/: BUILD.bazel  main.ts  styles.css  vite-env.d.ts
tools/: BUILD.bazel  ts.bzl
tools/bazel/: build_site.mjs  build_site.ts  render_mermaid.ts  serve_site.ts
tools/mermaid/: render_manifest.ts
