load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary", "gazelle_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//:tools/ts.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

# gazelle:ts_library_name typecheck
# gazelle:ts_npm_link_pattern //:node_modules/{pkg}
# gazelle:map_kind ts_library ts_library //:tools/ts.bzl
# gazelle:exclude scripts
# gazelle:exclude tools/bazel

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

filegroup(
    name = "site_sources",
    srcs = [
        "index.html",
        "package.json",
        "vite.config.ts",
        "//src:site_sources",
    ] + glob(
        [
            "posts/**/*.md",
            "public/**",
        ],
        allow_empty = True,
    ),
)

js_binary(
    name = "build_site_bin",
    data = [
        ":site_sources",  # keep
        "//:node_modules/@types/node",
        "//:node_modules/gray-matter",
        "//:node_modules/marked",
        "//:node_modules/mermaid",  # keep
        "//:node_modules/vite",
    ],
    entry_point = "tools/bazel/build_site.ts",
    node_options = ["--experimental-transform-types"],
)

js_run_binary(
    name = "site",
    args = [
        "$(RULEDIR)/dist",
    ],
    out_dirs = ["dist"],
    tool = ":build_site_bin",
)

alias(
    name = "build",
    actual = ":site",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@gazelle_ts//ts",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_test(
    name = "gazelle.check",
    gazelle = ":gazelle_bin",
    workspace = "//:BUILD.bazel",
)

ts_library(
    name = "typecheck",
    srcs = ["vite.config.ts"],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@types/node",  # keep
        "//:node_modules/vite",
    ],
)
