load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary", "gazelle_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools:ts.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

# gazelle:ts_library_name typecheck
# gazelle:ts_npm_link_pattern //:node_modules/{pkg}
# gazelle:map_kind ts_library ts_library //tools:ts.bzl
# gazelle:exclude tools/bazel

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

js_library(
    name = "site_sources",
    srcs = [
        "index.html",
        "main.ts",
        "package.json",
        "styles.css",
        "vite.config.ts",
        "vite-env.d.ts",
        "//tools:post_renderer_source",
    ] + glob(
        [
            "posts/**/*.md",
            "public/**",
        ],
        allow_empty = True,
        exclude = ["public/feed.xml"],
    ),
)

js_run_binary(
    name = "site",
    args = [
        "$(RULEDIR)/dist",
    ],
    out_dirs = ["dist"],
    tool = "//tools:build_site_bin",
)

alias(
    name = "build",
    actual = ":site",
)

alias(
    name = "prod",
    actual = "//tools:prod",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@gazelle_ts//ts",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_test(
    name = "gazelle.check",
    gazelle = ":gazelle_bin",
    workspace = "//:BUILD.bazel",
)

ts_library(
    name = "typecheck",
    srcs = [
        "main.ts",
        "vite.config.ts",
        "vite-env.d.ts",
    ],
    tsconfig_types = ["node"],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@iconify/types",  # keep
        "//:node_modules/@types/d3-selection",  # keep
        "//:node_modules/@types/node",
        "//:node_modules/mermaid",
        "//:node_modules/type-fest",  # keep
        "//:node_modules/vite",
    ],
)
