load("//:tools/ts.bzl", "ts_library")

ts_library(
    name = "typecheck",
    srcs = ["render-posts.ts"],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/gray-matter",
        "//:node_modules/marked",
        "//:node_modules/typescript",
    ],
)
